Fixed issue with filter menu and chip menu loading and overlapping

--- a/client/src/components/dashboard/workflows/workflow-header/workflow-heading.scss
+++ b/client/src/components/dashboard/workflows/workflow-header/workflow-heading.scss
@@ -134,10 +134,10 @@
     }
 
     .extend-filter-enter-active {
-        animation: extend-filter 0.75s;
+        animation: extend-filter 0.5s;
     }
     .extend-filter-leave-active {
-        animation: extend-filter 0.75s reverse;
+        animation: extend-filter 0.5s reverse;
     }
     @keyframes extend-filter {
         0% {height: 0px;
